# spark-store

./: CMakeLists.txt  README.md
src/: main.cpp
src/assets/: assets.qrc
src/qml/: GlobalSettings.qml  SideBar.qml  TopBar.qml  main.qml  qml.qrc
src/qml/Pages/: WebListPage.qml
translations/: *.ts
